[gd_scene load_steps=23 format=3 uid="uid://bjh82fuvsu6mm"]

[ext_resource type="Script" path="res://tscn/main.gd" id="1_1ex0a"]
[ext_resource type="PackedScene" uid="uid://b4oypce8sv10c" path="res://tscn/blue_ball.tscn" id="2_iom21"]
[ext_resource type="PackedScene" uid="uid://b1gjg1jedclpj" path="res://tscn/red_ball.tscn" id="3_be6er"]
[ext_resource type="Script" path="res://gd/score2.gd" id="4_rhoyg"]
[ext_resource type="Script" path="res://gd/blueLabel.gd" id="5_2i6cu"]
[ext_resource type="Script" path="res://gd/ColorRect.gd" id="6_gpejn"]
[ext_resource type="Texture2D" uid="uid://byt51ej1vntog" path="res://svg/af.svg" id="6_nm6qk"]
[ext_resource type="Texture2D" uid="uid://hsp8w8pr3l2c" path="res://svg/ad.svg" id="7_cjxb6"]
[ext_resource type="Script" path="res://gd/Boxes.gd" id="7_r0g4b"]
[ext_resource type="PackedScene" uid="uid://c40ec7g7sxyjo" path="res://tscn/red_box.tscn" id="8_jrcs3"]
[ext_resource type="PackedScene" uid="uid://brd6trgfsa4v8" path="res://tscn/blue_box.tscn" id="9_e04b5"]
[ext_resource type="AudioStream" uid="uid://waqggb7axv3h" path="res://wav/Juhani Junkala [Retro Game Music Pack] Level 3.wav" id="10_ktlfx"]
[ext_resource type="PackedScene" uid="uid://bueb4ntn7fj08" path="res://tscn/Menu.tscn" id="13_ftsra"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_r8mse"]

[sub_resource type="Sky" id="Sky_vkmxq"]
sky_material = SubResource("ProceduralSkyMaterial_r8mse")

[sub_resource type="Environment" id="Environment_rt63a"]
background_mode = 2
sky = SubResource("Sky_vkmxq")

[sub_resource type="BoxShape3D" id="BoxShape3D_a5ge2"]
size = Vector3(100, 10, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qme5e"]
size = Vector3(100, 10, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_nb058"]
size = Vector3(1, 10, 101)

[sub_resource type="BoxMesh" id="BoxMesh_ijkyt"]
size = Vector3(1, 10, 101)

[sub_resource type="BoxShape3D" id="BoxShape3D_8irq2"]
size = Vector3(100, 1, 101)

[sub_resource type="BoxMesh" id="BoxMesh_uslwe"]
size = Vector3(100, 1, 101)

[node name="VsCountry" type="Node3D"]
process_mode = 3
script = ExtResource("1_1ex0a")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 77.3753, -0.125239)
current = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15.7205, 0)
layers = 0
light_cull_mask = 4294443007
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rt63a")

[node name="BottomWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 51.088)
collision_layer = 16
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="BottomWall"]
shape = SubResource("BoxShape3D_a5ge2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BottomWall/CollisionShape3D"]
mesh = SubResource("BoxMesh_qme5e")
skeleton = NodePath("../..")

[node name="TopWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50.9407)
collision_layer = 16
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="TopWall"]
shape = SubResource("BoxShape3D_a5ge2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TopWall/CollisionShape3D"]
mesh = SubResource("BoxMesh_qme5e")
skeleton = NodePath("../..")

[node name="RightWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 49.532, 0, 0)
collision_layer = 16
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightWall"]
shape = SubResource("BoxShape3D_nb058")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightWall/CollisionShape3D"]
mesh = SubResource("BoxMesh_ijkyt")

[node name="LeftWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -49.514, 0, 0)
collision_layer = 16
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftWall"]
shape = SubResource("BoxShape3D_nb058")

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeftWall/CollisionShape3D"]
mesh = SubResource("BoxMesh_ijkyt")

[node name="Floor" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_8irq2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor/CollisionShape3D"]
mesh = SubResource("BoxMesh_uslwe")

[node name="BlueBall" parent="." instance=ExtResource("2_iom21")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2664, 31.6073)

[node name="RedBall" parent="." instance=ExtResource("3_be6er")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_rhoyg")

[node name="CountryName1" type="Label" parent="Control"]
layout_mode = 0
offset_left = 140.0
offset_top = 240.0
offset_right = 181.0
offset_bottom = 263.0

[node name="BlueScore" type="Label" parent="Control/CountryName1"]
layout_mode = 0
offset_left = 18.0
offset_top = 36.0
offset_right = 58.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 30
text = "21"
horizontal_alignment = 1
script = ExtResource("5_2i6cu")

[node name="TextureRect" type="TextureRect" parent="Control/CountryName1"]
layout_mode = 0
offset_top = -74.0
offset_right = 75.0
offset_bottom = -18.0
texture = ExtResource("6_nm6qk")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="Control/CountryName1"]
layout_mode = 0
offset_left = 75.0
offset_top = -66.0
offset_right = 115.0
offset_bottom = -26.0
color = Color(0, 0.15, 1, 1)

[node name="CountryName2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1420.0
offset_top = 228.0
offset_right = 1501.0
offset_bottom = 251.0
horizontal_alignment = 1

[node name="RedScore" type="Label" parent="Control/CountryName2"]
layout_mode = 0
offset_left = 21.0
offset_top = 38.0
offset_right = 61.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control/CountryName2"]
layout_mode = 0
offset_top = -66.0
offset_right = 75.0
offset_bottom = -10.0
texture = ExtResource("7_cjxb6")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="Control/CountryName2"]
layout_mode = 0
offset_left = -40.0
offset_top = -57.0
offset_bottom = -17.0
color = Color(1, 0, 0, 1)

[node name="YouWin" type="Label" parent="Control"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -29.0
offset_right = 55.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -79.5
offset_right = 244.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("6_gpejn")

[node name="PlayAgainButton" type="Button" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 205.0
offset_top = 113.0
offset_right = 293.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Play Again"

[node name="Boxes" type="Node3D" parent="."]
script = ExtResource("7_r0g4b")

[node name="RedBox" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.3128, 1.30081, -17)

[node name="RedBox2" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.3128, 1.30081, -17)

[node name="RedBox3" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.3128, 1.30081, -17)

[node name="RedBox4" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.31283, 1.30081, -17)

[node name="RedBox5" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6872, 1.30081, -17)

[node name="RedBox6" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.6872, 1.30081, -17)

[node name="RedBox7" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38.6872, 1.30081, -17)

[node name="RedBox8" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.3128, 1.30081, -11)

[node name="RedBox9" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.3128, 1.30081, -11)

[node name="RedBox10" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.31283, 1.30081, -11)

[node name="RedBox11" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.68717, 1.30081, -11)

[node name="RedBox12" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.6872, 1.30081, -11)

[node name="RedBox13" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.6872, 1.30081, -11)

[node name="RedBox14" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 44.6872, 1.30081, -11)

[node name="RedBox15" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.3128, 1.30081, -5)

[node name="RedBox16" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.3128, 1.30081, -5)

[node name="RedBox17" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.3128, 1.30081, -5)

[node name="RedBox18" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.31283, 1.30081, -5)

[node name="RedBox19" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6872, 1.30081, -5)

[node name="RedBox20" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.6872, 1.30081, -5)

[node name="RedBox21" parent="Boxes" instance=ExtResource("8_jrcs3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38.6872, 1.30081, -5)

[node name="BlueBox" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.2466, 1.30081, 4.18188)

[node name="BlueBox2" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.2466, 1.30081, 4.18188)

[node name="BlueBox3" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.2466, 1.30081, 4.18188)

[node name="BlueBox4" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.7534, 1.30081, 4.18188)

[node name="BlueBox5" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.7534, 1.30081, 4.18188)

[node name="BlueBox6" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.7534, 1.30081, 4.18188)

[node name="BlueBox7" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 44.7534, 1.30081, 4.18188)

[node name="BlueBox8" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.2466, 1.30081, 10.1819)

[node name="BlueBox9" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.2466, 1.30081, 10.1819)

[node name="BlueBox10" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.2466, 1.30081, 10.1819)

[node name="BlueBox11" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2466, 1.30081, 10.1819)

[node name="BlueBox12" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.7534, 1.30081, 10.1819)

[node name="BlueBox13" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.7534, 1.30081, 10.1819)

[node name="BlueBox14" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38.7534, 1.30081, 10.1819)

[node name="BlueBox15" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.2466, 1.30081, 16.1819)

[node name="BlueBox16" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.2466, 1.30081, 16.1819)

[node name="BlueBox17" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.2466, 1.30081, 16.1819)

[node name="BlueBox18" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.7534, 1.30081, 16.1819)

[node name="BlueBox19" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.7534, 1.30081, 16.1819)

[node name="BlueBox20" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.7534, 1.30081, 16.1819)

[node name="BlueBox21" parent="Boxes" instance=ExtResource("9_e04b5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 44.7534, 1.30081, 16.1819)

[node name="Button" type="Button" parent="."]
offset_left = 109.0
offset_top = 348.0
offset_right = 220.0
offset_bottom = 379.0
text = "Add Blue Ball"

[node name="Button2" type="Button" parent="."]
offset_left = 1403.0
offset_top = 352.0
offset_right = 1509.0
offset_bottom = 383.0
text = "Add Red Ball"

[node name="HSlider" type="HSlider" parent="."]
visible = false
offset_right = 159.0
offset_bottom = 16.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ktlfx")
volume_db = -5.0

[node name="Menu" parent="." instance=ExtResource("13_ftsra")]
visible = false

[connection signal="sDeleteBall" from="Control" to="." method="_on_control_s_delete_ball"]
[connection signal="sPauseGame" from="Control" to="." method="_on_control_s_pause_game"]
[connection signal="pressed" from="Control/ColorRect/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
